Regression(r242729): m_origin in IDBDatabaseIdentifier is incorrect https://bugs.webkit.org/show_bug.cgi?id=237044

Reviewed by Youenn Fablet.

Source/WebCore:

In r242729, we swapped top origin and opening origin in m_origin (it is a ClientOrigin) of IDBDatabaseIdentifier.
This can cause trouble since IndexedDB operation will be processed by wrong OriginStorageManager
(OriginStorageManager is identified by ClientOrigin). To fix this issue, we need to swap it back.

New test: IndexedDB.IndexedDBThirdPartyStorageLayout

* Modules/indexeddb/IDBDatabaseIdentifier.cpp:
(WebCore::IDBDatabaseIdentifier::IDBDatabaseIdentifier):
(WebCore::IDBDatabaseIdentifier::databaseDirectoryRelativeToRoot const):
(WebCore::IDBDatabaseIdentifier::databaseDirectoryRelativeToRoot):
* Modules/indexeddb/IDBDatabaseIdentifier.h:
* Modules/indexeddb/server/IDBServer.cpp:
(WebCore::IDBServer::IDBServer::getAllDatabaseNamesAndVersions):
(WebCore::IDBServer::IDBServer::diskUsage):

Source/WebKit:

* NetworkProcess/storage/IDBStorageManager.cpp:
(WebKit::migrateOriginData):
(WebKit::IDBStorageManager::idbStorageOriginDirectory):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBPersistence.mm:
(-[IndexedDBMessageHandler userContentController:didReceiveScriptMessage:]):
(TEST):



Canonical link: https://commits.webkit.org/247812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290532 268f45cc-cd09-0410-ab3c-d52691b4dbfc